--- a/index.html
+++ b/index.html
@@ -79,6 +79,16 @@
 <script type="text/javascript" src="convert-csv.js"></script>
 <script type="text/javascript" src="sunburst.js"></script>
 
+
+<script>
+    window.addEventListener("load", () => {
+      fetch("https://docs.google.com/spreadsheets/d/e/2PACX-1vS1jTV_Zx9AuiOmnPePGXrWOSXcXkJUwcYnyJBYNx1u02R5nbDav2dSaPPgYL4pqWeRHOfOfPxi62hY/pub?gid=0&single=true&output=csv")
+          .then(resp => console.log(resp)).catch(error => console.error(error));
+
+    });
+</script>
+
+
 </body>
 
 </html>
