Use static JSON

--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
 </footer>
 
 <script type="text/javascript"
+        src="web-competences.js"></script>
+<script type="text/javascript"
         src="convert-csv.js"></script>
 <script type="text/javascript"
         src="sunburst.js"></script>
