Use real data from Google Sheet

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
  <h1>Web-Competence</h1>
  <h2>Sunburst</h2>
 
+ <p>Datasource: <a href="https://docs.google.com/spreadsheets/d/1FljQanvUGVIbPS8-Yi7HV5EKVMSdw3-wdEQaG8cgiPs/edit?usp=sharing" target="_blank">Google Sheet</a> </p>
+
  <section class="container">
 
   <div id="main">
@@ -78,8 +80,7 @@
 
 </footer>
 
-<script type="text/javascript"
-        src="web-competences.js"></script>
+
 <script type="text/javascript"
         src="convert-csv.js"></script>
 <script type="text/javascript"
